# Ex5Client

./: CMakeLists.txt  main.cpp
include/: Board.h  DefaultLogic.h  Game.h  GameClient.h  GameFlow.h  GameLogic.h  GameMenu.h  MultiPlayerFlow.h  PrintingsHandler.h  ReversiGame.h  ReversiGameMenu.h  SinglePlayerFlow.h
src/: Board.cpp  DefaultLogic.cpp  Game.cpp  GameClient.cpp  GameFlow.cpp  GameMenu.cpp  MultiPlayerFlow.cpp  PrintingsHandler.cpp  ReversiGame.cpp  ReversiGameMenu.cpp  SinglePlayerFlow.cpp
test/: CMakeLists.txt
test/ReversiTests/: BoardTest.cpp  BoardTest.h  CMakeLists.txt  UpdateBoardTest.cpp  UpdateBoardTest.h  WinOrLoseTest.cpp  WinOrLoseTest.h  test_DefaultLogic.cpp
